--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="GyaanSetu - Advanced AI Assistant with Multi-Tool Capabilities, Voice Interface, and Real-time Collaboration">
+    <meta name="description" content="Ashish - Advanced AI Assistant with Multi-Tool Capabilities, Voice Interface, and Real-time Collaboration">
     <meta name="keywords" content="AI assistant, chat interface, web search, code execution, voice assistant">
-    <meta name="author" content="Gaurav Tomar">
+    <meta name="author" content="Ashish">
 
     <!-- PWA Support -->
     <meta name="theme-color" content="#667eea">
